# visor

./: .env.example  .gitignore  AGENTS.md  BUGS.md  DEMO.md  GOLDEN_PATH.md  Makefile  README.md  SDK_AUDIT.md  SECURITY.md  package-lock.json  package.json
.github/: dependabot.yml
.github/workflows/: ci.yml
agent/: .env.example  Dockerfile  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
agent/src/: index.test.ts  index.ts  wasm-loader.ts
agent/src/wasm/: visor_contract.core.wasm  visor_contract.d.ts  visor_contract.js
agent/src/wasm-instantiated/: visor_contract.core2.wasm  visor_contract.core3.wasm  visor_contract.d.ts  visor_contract.js
cli/: README.md  package-lock.json  package.json
cli/src/: index.test.ts  index.ts
contract/: Cargo.toml  README.md
contract/src/: lib.rs
contract/wit/: world.wit
data/fixtures/: profiles.json  templates.json
docs/: AUDIT_REPORT.md  DX-REPORT.md  visor_pitch_deck.md
scripts/: bench.py  bump_version.py  check_submission_readiness.py  seed.py  update_gh_details.sh  verify_offline.py
sdk/: README.md  package-lock.json  package.json
sdk/src/: index.test.ts  index.ts
ui/: .gitignore  Dockerfile  README.md  jest.config.js  lighthouserc.json  package-lock.json  package.json  playwright.config.ts
ui/e2e/: chat-flow.spec.ts  demo-mode.spec.ts  responsive.spec.ts
ui/public/: pitch.html  visor_pitch_deck.html
ui/src/__tests__/: layout.test.tsx  page.test.tsx
ui/src/app/: globals.css  layout.tsx  page.tsx
ui/src/components/: AuditTable.tsx  DashboardLayout.tsx  ReceiptModal.tsx  (+2 more)
(+11 files in other folders)
