[package]
name = "visor-contract"
version = "1.1.0"
edition = "2021"
description = "Visor privacy-blind submission TEE contract"
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
wit-bindgen = { version = "0.49.0", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
k256 = { version = "0.13.3", default-features = false, features = ["ecdh"] }
aes-gcm = { version = "0.10.3", default-features = false, features = ["aes", "alloc"] }
hkdf = { version = "0.12.4", default-features = false }
sha2 = { version = "0.10.8", default-features = false }

[profile.release]
opt-level = "s"
lto = true
